# template-backend

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  deny.toml  dockerfile  rust-toolchain.toml  taplo.toml
.github/workflows/: rust.yml
config/server-web/: debug.toml
config/web-server/: docker.toml
crates/lib/bin-common/: Cargo.toml
crates/lib/bin-common/src/: lib.rs  signal.rs  tracing.rs
crates/lib/cfg/: Cargo.toml  README.md
crates/lib/cfg/src/: file.rs  lib.rs
crates/lib/print/: Cargo.toml
crates/lib/print/src/: lib.rs
